--- a/orange/skins/squarebracket_bootstrap/templates/post.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/post.twig
@@ -19,7 +19,7 @@ enctype="multipart/form-data">
 		<h4>{{ __("Your post") }}</h4>
 	</div>
 </div>
-<p>{{ __("Write whatever you want to post on the squareBracket Forums") }}</p>
+<p>{{ __("Write whatever you want to post on the Qobo Forums") }}</p>
 
 	<input type="text" class="form-control mb-1" name="title" value="" placeholder="{{ __("Thread's title") }}">
 	<textarea class="form-control mb-1" name="desc" maxlength="2000" form="uploadForm"
