--- a/orange/skins/squarebracket_bootstrap/templates/settings.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/settings.twig
@@ -101,8 +101,8 @@
 			</div>
 			<div class="tab-pane fade" id="v-pills-partner" role="tabpanel" aria-labelledby="v-pills-partner-tab">
 				<div class="h-100 p-5 bg-light border rounded-3">
-					<h2>{{ __("squareBracket Checkmark Program") }}</h2>
-					<p>{{ __("Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.") }}</p>
+					<h2>{{ __("Qobo Checkmark Program") }}</h2>
+					<p>{{ __("Getting checkmarked on Qobo can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.") }}</p>
 					<a class="btn btn-primary" href="https://forms.gle/rD8sFd58S9pdCj617">{{ __("Apply for Checkmark") }}</a><br>
 					<small>{{ __("Made using Google Forms.") }}</small>
 				</div>
