--- a/orange/skins/squarebracket_bootstrap/templates/settings_redesign.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/settings_redesign.twig
@@ -8,7 +8,7 @@
 						<div class="col-12">
 							<img class="float-start rounded-circle" src="{{ profile_picture(current_user.username) }}" style="margin-right: 1.5%;" width="64" alt="pfp">
 							<h2>{{ current_user.display_name }}</h2>
-							<p>Your squareBracket account (or channel?)</p>
+							<p>Your Qobo account (or channel?)</p>
 						</div>
 					</div>
 <div class="col-lg-2 col-4">
