--- a/orange/skins/squarebracket_bootstrap/templates/upload.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/upload.twig
@@ -5,7 +5,7 @@
 	{% block content %}
 <div class="row">
 <h3>{{ __("Upload video") }}</h3>
-<p><span class="badge bg-primary">{{ icon('info-circle', 16) }} {{ __("Important") }}</span> {{ __("By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.") }}</p>
+<p><span class="badge bg-primary">{{ icon('info-circle', 16) }} {{ __("Important") }}</span> {{ __("By uploading your videos onto Qobo, you acknowledge about the upload guidelines.") }}</p>
 <div class="col-8">
 <form name="uploadForm" id="uploadForm" method="post" action="upload.php"
 enctype="multipart/form-data">
