--- a/orange/skins/common/image.twig
+++ b/orange/skins/common/image.twig
@@ -1,1 +1,1 @@
-<img class="img-submission" src="{{ submission.file }}" alt="{{ submission.title }}">
+<img class="img-submission img-fluid" src="{{ submission.file }}" alt="{{ submission.title }}">
