--- a/orange/skins/squarebracket_bootstrap/templates/_layout-admin.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/_layout-admin.twig
@@ -17,11 +17,11 @@
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/common.js"></script>
-	<title>squareBracket Dashboard</title>
+	<title>Qobo Dashboard</title>
 </head>
 <body>
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">squareBracket Dashboard</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Qobo Dashboard</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -98,8 +98,8 @@
 	<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 		{% block content %}{% endblock %}
 		<footer class="text-center pt-3 my-2 text-muted border-top">
-			<h4 class="mb-2">squareBracket</h4>
-				{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}
+			<h4 class="mb-2">Qobo</h4>
+				{{ __("By Qobo contributors") }} · 2020-{{ 'now' | date('Y') }}
 			<br><br>
 			{% for menu_link in menu_links %}
 						<a href="{{ menu_link.url }}" class="text-muted px-2">{{ icon(menu_link.icon, 16) }} {{ menu_link.name }}</a>
