--- a/orange/skins/squarebracket_bootstrap/templates/_layout-login.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/_layout-login.twig
@@ -16,12 +16,12 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0065d8">
-		<meta name="apple-mobile-web-app-title" content="squareBracket">
-		<meta name="application-name" content="squareBracket">
+		<meta name="apple-mobile-web-app-title" content="Qobo">
+		<meta name="application-name" content="Qobo">
 		<meta name="msapplication-TileColor" content="#2d89ef">
 		<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 		<meta name="theme-color" content="#0065d8">
-		<title>{% block title %}{% endblock %} - squareBracket</title>
+		<title>{% block title %}{% endblock %} - Qobo</title>
 	</head>
 	<body class="text-center">
 		{% block content %}{% endblock %}
