--- a/orange/skins/squarebracket_bootstrap/templates/about.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/about.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ __("About") }}{% endblock %}
 
 {% block content %}
-<h1>{{ __("About squareBracket") }}</h1>
+<h1>{{ __("About Qobo") }}</h1>
 <div style="background:white;">
 <img class="mx-auto d-block" width="45%" src="/assets/logo-wordmark.png">
 </div>
@@ -13,10 +13,10 @@
 	<div class="row">
 		<div class="col-4"></div>
 		<div class="col-8">
-			{{ __("Gamerappa squareBracket") }}<br>
+			{{ __("Gamerappa Qobo") }}<br>
 			{{ __("Version 2.0 (Build 47101)") }}<br>
-			{{ __("By squareBracket contributors") }} 2020-{{ 'now' | date('Y') }}<br>
-			{{ __("The squareBracket website is open source on GitHub.") }}
+			{{ __("By Qobo contributors") }} 2020-{{ 'now' | date('Y') }}<br>
+			{{ __("The Qobo website is open source on GitHub.") }}
 		</div>
 	</div>
 </div>
