--- a/orange/skins/squarebracket_bootstrap/templates/components/smallvideobox.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/components/smallvideobox.twig
@@ -2,19 +2,19 @@
 	<div class="card-body">
 		<div class="row">
 			<div class="col-5">
-				<a href="watch.php?v={{ data.video_id }}">
+				<a href="watch.php?v={{ submission.id }}">
 					<div class="img-thumbnail" style="margin-bottom:0">
-						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
+						<img class="img-fluid" src="{{ thumbnail(submission.id, submission.type) }}">
 					</div>
 				</a>
 			</div>
 			<div class="col-7">
-				<h5><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h5>
+				<h5><a href="watch.php?v={{ submission.id }}">{{ submission.title }}</a></h5>
 				{# hack to prevent twig from outputing the number 1 #}
-				{% if data.views != 1 %}
+				{% if submission.views != 1 %}
 					{% set pluralViews = __("s") %}
 				{% endif %}
-				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("view%s", [pluralViews]) }} &bull; {{ data.time | relative_time }}</p>
+				<p>{{ user_link(submission.author) }} &bull; {{ submission.views }} {{ __("view%s", [pluralViews]) }} &bull; {{ submission.published | relative_time }}</p>
 			</div>
 		</div>
 	</div>
