add (shitty) theme changing page

--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -138,6 +138,9 @@
             <a href="/privacy.php">
                 Privacy policy
             </a>
+            <a href="/theme.php">
+                Change theme
+            </a>
         </div>
     </div>
 </div>
