--- a/orange/skins/squarebracket_bootstrap/templates/_layout.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/_layout.twig
@@ -126,6 +126,7 @@
 				<p class="my-0">
 					<a href="version.php" class="me-1">About</a>
 					<a href="privacy.php" class="me-1">Privacy policy</a>
+					<a href="theme.php" class="me-1">Change theme</a>
 				</p>
 			</div>
 		</div>
