--- a/orange/skins/squarebracket_bootstrap/templates/watch.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/watch.twig
@@ -23,8 +23,8 @@
 						<div class="col-lg-9">
 							<div class="row">
 								<div class="col-lg-2" style="width:10%;padding-right:0">
-									<a href="user.php?name={{ submission.u_username }}">
-										<img class="float-start rounded-circle w-100" src="{{ profile_picture(submission.u_username) }}">
+									<a href="user.php?name={{ submission.author.info.username }}">
+										<img class="float-start rounded-circle w-100" src="{{ profile_picture(submission.author.info.username) }}">
 									</a>
 								</div>
 								<div class="col-lg-10">
