--- a/orange/skins/squarebracket_bootstrap/templates/index.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/index.twig
@@ -36,7 +36,7 @@
 					<div class="card" style="margin-bottom:10px">
 						<div class="card-body">
 							<h5>
-								<a href="watch.php?v={{ submission.id }}">
+								<a href="read.php?j={{ news.id }}">
 									{{ news.title|u.truncate(100, '...') }}
 								</a>
 							</h5>
