--- a/orange/skins/qobo/templates/watch.twig
+++ b/orange/skins/qobo/templates/watch.twig
@@ -21,30 +21,7 @@
 {% endif %}
 
 {% block scripts %}
-    <script src="/assets/rater.js"></script>
-    <script>
-        var starRating = raterJs( {
-            max:5,
-            starSize:16,
-            rating:{{ submission.interactions.ratings.average }},
-            element:document.querySelector("#rater"),
-            rateCallback:function rateCallback(rating, done) {
-                fetch("/api/finalium/submission_interaction.php", {
-                    method: "POST",
-                    body: JSON.stringify({
-                        action: "rate",
-                        number: rating,
-                        submission: submission_int_id,
-                    }),
-                    headers: {
-                        "Content-type": "application/json; charset=UTF-8"
-                    }
-                }).then((response) => response.json()).then((json) => { if(json["error"]) { error(json["error"])}})
-                this.setRating(rating);
-                done();
-            }
-        });
-    </script>
+    {{ include('submission_rating_script.twig') }}
 
     <script>
         submission_id = '{{ submission.id }}';
