--- a/orange/skins/squarebracket_bootstrap/templates/browse.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/browse.twig
@@ -4,13 +4,7 @@
 
 	{% block content %}
 <div class="row"><div class="col">
-	<h3>
-		{% if 'subscriptions' in url %}
-			{{ __("Videos from subscriptions") }}
-		{% else %}
-			{{ __("Videos") }}
-		{% endif %}
-	</h3>
+	<h3>Browse submissions</h3>
 	<div class="card-body">
 		{% for video in data.submissions|batch(4) %}
 		<div class="row">
@@ -42,13 +36,7 @@
 			{% endfor %}
 		</div>
 		{% else %}
-			<p>
-				{% if 'subscriptions' in url %}
-					{{ __("Your subscriptions haven't uploaded videos yet.") }}
-				{% else %}
-					{{ __("No uploaded videos.") }}
-				{% endif %}
-			</p>
+			<p>No submissions.</p>
 		{% endfor %}
 		{{ pagination(pageCount, 20, currentPage, url) }}
 	</div>
