--- a/orange/skins/squarebracket_bootstrap/templates/components/comment.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/components/comment.twig
@@ -1,13 +1,15 @@
 <div class="row">
 	<div class="col-lg-1" style="width:5.5%;padding-right:0">
-		<a href="user.php?name={{ data.u_username }}">
-			<img class="rounded-circle w-100" src="{{ profile_picture(data.u_username) }}">
+		<a href="user.php?name={{ comment.author.info.username }}">
+			<img class="rounded-circle w-100" src="{{ profile_picture(comment.author.info.username) }}">
 		</a>
 	</div>
 	<div class="col-lg-10">
-		{{ userlink(data, 'u_') }} &bull; {{ data.date | relative_time}}
-		{% apply markdown_to_html | nl2br %}
-			{{ data.comment | raw }}
-		{% endapply %}
+		{{ user_link(comment.author) }} &bull; {{ comment.posted | relative_time}}
+		{% if comment.post | trim is not empty %}
+			{{ comment.post | markdown_user_written }}
+		{% else %}
+			<small>Null comment</small>
+		{% endif %}
 	</div>
 </div>
