--- a/orange/skins/squarebracket_bootstrap/templates/users.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/users.twig
@@ -6,7 +6,7 @@
 <div class="alert alert-primary">TODO: Redesign this so that it doesn't look like utter garbage.</div>
 <div class="row"><div class="col">
 	<div class="card">
-		<div class="card-header bg-dark text-white">{{ __("Channels") }}</div>
+		<div class="card-header bg-dark text-white">Members</div>
 		<div class="card-body">
 			{% for user1 in users.users|batch(4) %}
 			<div class="row">
