Detect themes properly instead of hardcoding it.

--- a/orange/skins/common/theme.twig
+++ b/orange/skins/common/theme.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Change theme{% endblock %}
+{% set title = "Change theme" %}
 
 {% block content %}
     <h1>Change theme</h1>
