--- a/bootstrap/bootstrap.scss
+++ b/bootstrap/bootstrap.scss
@@ -1,2 +1,4 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
+@import "variables";
 @import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
+@import "custom";
