add random slogan function

--- a/orange/skins/squarebracket_bootstrap/templates/index.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/index.twig
@@ -28,7 +28,7 @@
 					<div class="clearfix"></div>
 				{% else %}
 					<h3>{{ __("Welcome to Qobo") }}</h3>
-					<p>Your content, your narration, your niche on the web.</p>
+					<p>{{ random_slogan() }}</p>
 				{% endif %}
 				<hr/>
 				<h3>{{ __("News and updates") }}</h3>
