--- a/orange/skins/squarebracket_bootstrap/templates/admin.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/admin.twig
@@ -3,9 +3,7 @@
 {% block title %}{{ __("Admin") }}{% endblock %}
 
 	{% block content %}
-<h2>{{ __("All videos") }}</h2>
-<h3>{{ __("Approved videos") }}</h3>
-{% for video in videos %}
-	{{ video_box(video) }}
-{% endfor %}
+		<p>
+			Please use the Biscuit frontend for any administration duties.
+		</p>
 	{% endblock %}
