--- a/orange/skins/squarebracket_bootstrap/templates/components/browsevideobox.twig
+++ b/orange/skins/squarebracket_bootstrap/templates/components/browsevideobox.twig
@@ -1,20 +1,20 @@
 <div class="card" style="margin-bottom:10px">
 	<div class="card-body text-center">
-		<div class="row"><a href="watch.php?v={{ data.video_id }}">
+		<div class="row"><a href="watch.php?v={{ submission.video_id }}">
 				<div class="col-lg-12" style="margin-bottom:15px">
 					<div class="img-thumbnail">
-						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
+						<img class="img-fluid" src="{{ thumbnail(submission.id, submission.type) }}">
 					</div>
 				</div>
 			</a>
 			<div class="col-lg-12">
-				<h4><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h4>
+				<h4><a href="watch.php?v={{ submission.video_id }}">{{ submission.title }}</a></h4>
 				{# hack to prevent twig from outputing the number 1 #}
-				{% if data.views != 1 %}
+				{% if submission.views != 1 %}
 					{% set pluralViews = __("s") %}
 				{% endif %}
-				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("view%s", [pluralViews]) }} &bull;
-				{{ data.time | relative_time }}</p>
+				<p>{{ user_link(submission.author) }} &bull; {{ submission.views }} {{ __("view%s", [pluralViews]) }} &bull;
+				{{ submission.published | relative_time }}</p>
 			</div>
 		</div>
 	</div>
